# PCL

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  pyrightconfig.json
backend/alembic/: env.py
backend/alembic/versions/: 62ffb999d45a_initial_schema.py  b3e8a1c2d4f5_story_clusters_and_article_extensions.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: articles.py  categories.py  health.py  methodology.py  router.py  scrape.py  stats.py  stories.py
backend/app/core/: __init__.py  celery_app.py  config.py  logging.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/schemas/: __init__.py  analysis.py  article.py  stats.py
backend/app/services/: aggregator.py  article_context.py  claimbuster.py  newsapi_scraper.py  preprocessor.py  rss_scraper.py  scoring.py  scraper.py  story_cluster.py  story_cluster_sync.py  unbias.py
backend/app/tasks/: __init__.py  analyze_task.py  cleanup_task.py  cluster_task.py  scrape_task.py
backend/app/utils/: __init__.py  hashing.py  source_credibility.py
backend/evaluation/: __init__.py  evaluate_bias.py  evaluate_claims.py  evaluate_scoring.py  evaluate_tokens.py  run_all.py
backend/evaluation/datasets/: README.md
backend/tests/: __init__.py  conftest.py  test_aggregator.py  test_evaluation_smoke.py  test_utils.py
docs/: ARCHITECTURE.md  DATASETS.md  EVALUATION.md  MANUAL_VERIFICATION.md  METHODOLOGY.md  PARAMETER_PROVENANCE.md  UI_BACKEND_MAP.md
frontend/: index.html  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: ArticleCard.tsx  CategoryBadge.tsx  Footer.tsx  (+3 more)
scripts/: reset.sh  reset_db.sh  verify_stack.sh
(+8 files in other folders)
